--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,30 @@
 <resources>
+    <!-- General -->
     <string name="app_name">MenuTium Chef</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="action_settings">Settings</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in</string>
+    <string name="action_register">Register</string>
+    <string name="google_login"> Sign in with Google+ </string>
+    <string name="reset_password"><u>Forgot password ?</u></string>
+    <string name="submit">Submit</string>
+    <string name="cancel"><u>Cancel</u></string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_invalid_account">Wrong Email or password</string>
     <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+    <string name="err_signing">Connection failed</string>
+    <string name="err_mail_already_used">Email already used</string>
+    <string name="email_reset_password">We have sent you an email to reset your password</string>
+    <string name="err_no_internet">Please connect to internet first</string>
+
+    <!--Messages for user-->
+    <string name="section_format">section</string>
+    <string name="loading">Loading…</string>
+
 </resources>
